# finamdata

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
finamdata/: cli.py  contract.py  finam.py  moex.py  utils.py
