[tool.poetry]
name = "finamdata"
version = "0.1.0"
description = ""
authors = ["Georgy Cheshkov <georgy@cheshkov.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.16.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
