[tool.poetry]
name = "finamdata"
version = "0.1.0"
description = ""
authors = ["Georgy Cheshkov <georgy@cheshkov.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
python-dateutil = "^2.8.1"
finam-export = "^2.0.0"
typer = "^0.3.1"

[tool.poetry.dev-dependencies]
ipython = "*"
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
mypy = "^0.782"
isort = "^5.2.2"

[tool.poetry.scripts]
finamdata = 'finamdata.cli:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
